<resources>
    <string name="app_name">Android para Todos</string>


    <!--Text Splash Activitys-->

    <string name="Confianza_txt">Consejos\n\n
        Tutoriales\n\n
        Conceptos\n\n
        Y Mas..</string>
    <string name="title_activity_content">contentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Text  Activitys MENU activity-->
    <string name="Target_concept">Conceptos Basicos</string>
    <string name="Target_IDE">Un Vistaso:\nAndroid Studio</string>
    <string name="Target_graphic">Elementos De Una Apliacion</string>
    <string name="Target_apps">Aplicaciones</string>
    <string name="Target_bookstores">Librerias y dependencias</string>
    <string name="Target_personalization">Consejos y Personalizacíon</string>

    <!-- Text Fragments-->

    <string name="intoXML">Presiona este icono para poder ver cómo está declarado en el XML.\n\nRecuerda XML es la parte visual para el usuario.</string>
    <string name="intoJAVA">Presiona este icono para poder ver cómo está declarado en el Java.\n\nRecuerda Java es la logica de nuestra aplicación.</string>
    <string name="intoGradle">Presiona este icono para poder ver que libreria se usa en el Gradle.</string>
    <string name="initintro">Encontraras este icono en algunas partes al presionarlo saldran otros iconos que te ayudaran a entender el mundo de android\n\nApartir de aqui desliza hasta terminar el tutorial</string>
    <string name="Titleregistry">Comencemos a explorar Android</string>
    <string name="Slidetocontinue">Desliza para continuar -></string>
    <string name="Actionbutton">Android para todos es una iniciativa interactiva para aprender android desarrollada por Gio :)</string>

    <!-- Text Fragments profiles-->
    <string name="developerhe">Desarrollador:</string>
    <string name="developershe">Desarrolladora:</string>
    <string name="progresConcep">Conceptos básicos</string>
    <string name="progresAndroid">IDE AndroidStudio</string>
    <string name="progresElementos">Elementos gráficos</string>
    <string name="progresAplicaciones">Aplicaciones</string>
    <string name="backimage">Regresar</string>

    <!--Text Fragmet Registro-->
    <string name="genero">Elige tu genero</string>
    <string name="he">Hombre</string>
    <string name="she">Mujer</string>

    <!--Text Fragmet Conceptos-->

    <string name="titlesapp">Que es una aplicacion</string>
    <string name="titletapps">Tipos de aplicaiones</string>
                      <!--conceptos tabla-->
    <string name="titletab">Etapas de desarrollo de aplicaciones</string>
    <string name="tabConceptualizacion">Conceptualización</string>
    <string name="tabConcept">Idea de la aplicación - idea - investigación - formalización de la idea</string>
    <string name="tabDefnicion">Definición</string>
    <string name="tabDefni">definir funcionalidad\nusuarios a los que va dirigida\nalcance</string>
    <string name="tabDesarrollo">Desarrollo</string>
    <string name="tabDesar">vida de los diseños\nfuncionalidad\npruebas y depuración de errores</string>
    <string name="tabDiseño">Diseño</string>
    <string name="tabDise">uso de prototipos\nuso de programas para el diseño</string>
    <string name="tabPublicacion">Publicación</string>
    <string name="tabPubli">uso de las tiendas\nmárquetin</string>
                    <!--/conceptos tabla-->
    <string name="titleConceptos">Conceptos basicos</string>
    <string name="Activitytitle">Activity</string>
    <string name="Intenttitle">Intents y filtros de intents</string>
    <string name="BroadcastReceivertitle">BroadcastReceiver</string>
    <string name="Fragmenttitle">Fragments</string>


    <string name="titlerept">Reparticíon de trabajo</string>

    <!-- Text Toast-->
    <string name="toast_intro_btn">Por favor ingresa tu nombre</string>


    <!-- Text hints-->

    <string name="hintRegistro">Ingresa tu nombre</string>

    <!-- Text Buttons-->

    <string name="buttonregistry">Listo</string>


    <!--Texts title Dialogs-->
    <string name="Titlesxml">Nuesto .XML esta conformado</string>
    <string name="Titlesjava">Nuesto .java Contiene</string>
    <string name="Titlesgradle">en el .XML agregamos lo siguiente</string>
    <string name="onPositivetext">De acuerdo</string>


    <!--Texts Dialogs-->

    <string name="Dialogintroxml">com.github.florent37.materialtextfield.MaterialTextField\nandroid:layout_marginTop="50dp"\nandroid:layout_gravity="center"\nandroid:layout_width="300dp"\android:layout_height="wrap_content"\napp:mtf_labelColor="@color/colorBlack"\napp:mtf_image="@drawable/user"\n>\nEditTextandroid:layout_width="match_parent"\nandroid:layout_height="wrap_content"\nandroid:hint="@string/hintRegistro"\nandroid:textColor="@color/colorBlack"\nandroid:textSize="15sp"\n/>\n/com.github.florent37.materialtextfield.MaterialTextField>\nButton\nandroid:layout_marginTop="100dp"\nandroid:layout_gravity="center"\nandroid:layout_marginLeft="20dp"\nandroid:background="@drawable/roundbutton"\nandroid:text="@string/buttonregistry"\nandroid:textColor="@color/colorBlack"\nandroid:layout_marginRight="20dp"\nandroid:layout_width="match_parent"\nandroid:layout_height="wrap_content" /></string>
    <string name="Dialogintrojava">Lo primero que hacemos  es el mapeo:\n\nEditText textname;\nButton   btnListo;\n\nDespues el casteo:\n\ntextname=view.findViewById(R.id.editname);\nbtnListo=view.findViewById(R.id.btnListo);\n\nPor ultimo tenemos nuestra logica:\n\nbtnListo.setOnClickListener(new View.OnClickListener() {\n@Override\npublic void onClick(View view) {\nif (textname.getText().toString().equals("")) {\nToast.makeText(getContext(), R.string.toast_intro_btn, Toast.LENGTH_SHORT).show();\n} else {\nIntent intent = new Intent(getContext(), MenuActivity.class);\nstartActivity(intent);\n}\n}\n});\n</string>
    <string name="Dialogintrogradle">Muy bien como vemos utilizamos una libreria para el EditText\nSolo tenemos que agregrar esta libreria:\n\nimplementation com.github.florent37:materialtextfield:1.0.7</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_conceptos_conten">conceptosConten</string>
    <string name="tab_text_1">Aplicaciones</string>
    <string name="tab_text_2">Conceptos</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_content_id">contentID</string>
    <string name="title_activity_content_elements">contentElements</string>
    <string name="title_activity_content_apss">contentApss</string>
    <string name="title_activity_content_library">contentLibrary</string>
    <string name="title_activity_conten_tips">contenTips</string>


</resources>
