<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundpink"
    tools:context=".Fragments.profileShen">

    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgbackshe"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/arrowback"/>
        <TextView
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:text="@string/backimage"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/girl"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developerhe"
                android:textSize="22sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/namehe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Example name"
                android:textSize="22sp"
                android:textColor="@color/colorBlack"/>

            <ProgressBar
                style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorBlue"
                android:outlineSpotShadowColor="@color/colorBlue"
                />

        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progresConcep"/>
        <ProgressBar
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:background="@color/colorBlue"
            android:outlineSpotShadowColor="@color/colorBlue"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"

            />
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progresAndroid"/>
        <ProgressBar
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorBlue"
            android:outlineSpotShadowColor="@color/colorBlue"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progresElementos"/>
        <ProgressBar
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorBlue"
            android:outlineSpotShadowColor="@color/colorBlue"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progresAplicaciones"/>
        <ProgressBar
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorBlue"
            android:outlineSpotShadowColor="@color/colorBlue"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />

    </LinearLayout>




</LinearLayout>